--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -1,5 +1,5 @@
 .player {
-  min-height: 20vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +30,7 @@
     cursor: pointer;
   }
 }
-input[type="rangw"]:focus {
+input[type="range"]:focus {
   outline: none;
 }
 input[type="range"]::-webkit-slider-thumb {
@@ -61,7 +61,17 @@ input[type="range"]::-moz-slider-thumb {
   transform: translateX(0%);
   pointer-events: none;
 }
-
+.audio-controls {
+  display: flex;
+  flex-direction: column;
+}
+.volume-slider {
+  width: 100%;
+  -webkit-appearance: none;
+  background: transparent;
+  border-radius: 1rem;
+  cursor: pointer;
+}
 @media screen and (max-width: 768px) {
   .time-control {
     width: 90%;
