--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -5,10 +5,10 @@
   width: 30rem;
   height: 100%;
   background: white;
-  box-shadow: 2px 2px 50px rgb(200, 198, 198);
+  box-shadow: 0 1rem 1rem rgb(91, 92, 92);
   overflow: scroll;
   transform: translateX(-100%);
-  transition: all 0.5s ease;
+  transition: all 0.55s ease;
   opacity: 0;
   h2 {
     padding: 2rem;
@@ -18,7 +18,6 @@
 .library-song {
   display: flex;
   align-items: center;
-  //   flex-direction: column;
   padding: 1rem 2rem 1rem 2rem;
   cursor: pointer;
   transition: background 0.5s ease;
@@ -26,7 +25,7 @@
     width: 40%;
   }
   &:hover {
-    background: #f2d349;
+    background: #ffd000;
   }
 }
 .song-description {
@@ -57,7 +56,8 @@
 }
 
 .selected {
-  background: #8aa899;
+  background: #d4af37;
+  // background: rgb(112, 198, 255);
 }
 .active-library {
   transform: translateX(0%);
