--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,26 +1,60 @@
 nav {
   min-height: 10vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  // padding: 2rem;
   align-items: center;
+  background-color: #d4af37;
+  // border-radius: 0.5rem;
+  // box-shadow: 0 1rem 1rem rgb(91, 92, 92);
+  box-shadow: 0 1rem 1rem #5b5c5c6b;
+
+  .logo {
+    display: flex;
+    flex: 3;
+    justify-content: center; // width: 50%;
+    // background-color: red;
+  }
+  .icon {
+    padding: 0 0.5rem 0 0.1rem;
+  }
+  .buttons {
+    display: flex;
+    flex: 2;
+  }
   button {
     background: transparent;
+    background: #aa9122;
     border: none;
     cursor: pointer;
-    border: 2px solid rgb(65, 65, 65);
-    padding: 1em;
+    border: 2px solid rgb(255, 255, 255);
+    margin-right: 1rem;
+    padding: 0.6rem;
     border-radius: 0.2rem;
     transition: all 0.3 ease;
+    color: white;
     &:hover {
-      background: #8aa899;
+      background: #161616ab;
       color: white;
     }
+  }
+  img {
+    margin-right: 1rem;
   }
 }
 @media screen and (max-width: 768px) {
   nav {
+    // position: sticky;
     button {
+      text-align: center;
       z-index: 10;
+      font-size: 0.5rem;
+      width: 5rem;
+      height: 2rem;
     }
+    color: red;
+  }
+  .icon {
+    // visibility: none;
   }
 }
