--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -5,8 +5,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 3rem;
+
   img {
-    width: 20%;
+    width: 30%;
     border-radius: 10%;
   }
   h2 {
@@ -18,8 +20,18 @@
 }
 @media screen and (max-width: 768px) {
   .song-container {
+    min-height: 55vh;
     img {
-      width: 60%;
+      width: 80%;
+    }
+    h2 {
+      padding: 1rem 0rem 0rem 0rem;
+    }
+    h3,
+    h4,
+    h1 {
+      padding: 0;
+      margin: 0;
     }
   }
 }
