--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -2,15 +2,30 @@
   margin-top: 3rem;
   display: flex;
   justify-content: center;
-  height: 10vh;
+  text-align: center;
+  min-height: 10vh;
   //   align-items: center;
   //   align-self: center;
   background-color: #d4af37;
   //   box-shadow: 0 1rem 1rem rgb(91, 92, 92);
   box-shadow: 0 1rem 1rem #5b5c5c6b;
+  a:link {
+    text-decoration: none;
+    color: #646464;
+  }
+  a {
+    color: #646464;
+  }
+  p {
+    color: #646464;
+  }
+  p:last-child {
+    margin-bottom: 20px;
+  }
 }
 .social {
-  margin-top: 1rem;
+  margin: 1rem 0rem 1rem 0rem;
+  align-self: center;
   //   padding: 1rem;
 }
 .social > * {
