change main color

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -6,18 +6,18 @@
   min-height: 10vh;
   //   align-items: center;
   //   align-self: center;
-  background-color: #d4af37;
+  background-color: #078;
   //   box-shadow: 0 1rem 1rem rgb(91, 92, 92);
   box-shadow: 0 1rem 1rem #5b5c5c6b;
   a:link {
     text-decoration: none;
-    color: #646464;
+    color: white;
   }
   a {
-    color: #646464;
+    color: white;
   }
   p {
-    color: #646464;
+    color: white;
   }
   p:last-child {
     margin-bottom: 20px;
