--- a/src/styles/_contactform.scss
+++ b/src/styles/_contactform.scss
@@ -1,21 +1,20 @@
 .form-container {
   padding-top: 2rem;
   display: flex;
-  width: 90%;
+  width: 100%;
   margin: auto;
   align-content: center;
-  padding: 2rem;
-  box-shadow: 0 1rem 1rem #5b5c5c6b;
-
-  border-radius: 0.5rem;
-  margin-top: 2rem;
+  // padding: 2rem;
+  // box-shadow: 0 1rem 1rem #5b5c5c6b;
+  // border-radius: 0.5rem;
+  // margin-top: 2rem;
 }
 
 .form {
   //   flex: 5;
   display: flex;
   margin: auto;
-  width: 80%;
+  width: 100%;
   flex-direction: column;
   color: #646464;
   input,
@@ -25,19 +24,27 @@
     margin-top: 1rem;
     text-align: center;
     border-radius: 0.2rem;
+    font-size: 1rem;
+    width: 100%;
+    font-family: "Lato", sans-serif;
+  }
+  textarea::placeholder {
+    // font-family: "Lato", sans-serif;
   }
   input:focus,
   textarea:focus {
     outline: none;
-    border: 0.5px solid #d4af37;
+    border: 0.5px solid #078;
+    font-family: inherit;
   }
   button {
     margin-top: 1rem;
-    background: #d4af37;
-    height: 2rem;
+    background: #078;
+    height: 4rem;
     border-radius: 0.2rem;
     border: none;
-    width: 100%;
+    width: 30%;
+    align-self: center;
     color: white;
     text-transform: uppercase;
     font-size: 1rem;
