--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -1,15 +1,16 @@
 .event-container {
   margin-top: 3rem;
   min-height: 10vh;
-  min-width: 80%;
-  max-width: 90%;
+  width: 100%;
+  // min-width: 80%;
+  // max-width: 90%;
   margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 0.5rem;
+  // border-radius: 0.5rem;
   // box-shadow: 0 1rem 1rem rgb(91, 92, 92);
-  box-shadow: 0 1rem 1rem #5b5c5c6b;
+  // box-shadow: 0 4px 6px #5b5c5c6b;
   // font-size: 1rem;
   background-color: #ffffff;
   padding-bottom: 3rem;
@@ -17,25 +18,25 @@
   //   justify-content: space-between;
 }
 .event {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  color: #eee;
+  color: #5b5c5c;
   padding: 1rem;
   margin: 0.1rem;
-  background-color: #d4af37;
+  background-color: #e3e3e3;
   border-radius: 0.2rem;
   // box-shadow: 1rem 0.2rem 5rem rgba(91, 92, 92, 0.5);
   &:hover {
-    background: #aa9122;
+    background: #078;
     color: white;
     cursor: pointer;
   }
 }
 .eventer {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -48,7 +49,7 @@
 .event-detail {
   // justify-content: center;
   align-items: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   // align-self: center;
   padding-right: 2rem;
   // box-shadow: 0 0.2rem 0.5rem rgb(91, 92, 92);
